* 2014-03-23 - thorben.betten@open-xchange.com

 - Fix for bug 31677: Properly do the thread-sort for subscribed POP3 accounts accessed via Unified Mail

* 2014-03-20 - thorben.betten@open-xchange.com

 - Fix for bug 31657: Drop "webmail" capability for context administrator if "com.openexchange.mail.adminMailLoginEnabled" is set to "false"

* 2014-03-19 - thorben.betten@open-xchange.com

 - Fix for bug 31644: Properly collect available text parts on reply if original message contains multipart/alternative appendix

* 2014-03-17 - thorben.betten@open-xchange.com

 - Fix for bug 31587: Pass obtained BundleContext instance to initializing method, not the stored one to ensure working on most recent bundle/framework state

* 2014-03-10 - thorben.betten@open-xchange.com

 - Fix for bug 31304: Suppress warning if "pop3.refreshrate" property is missing. Silently use fall-back value

* 2024-03-07 - ioannis.chouklis@open-xchange.com

 - Fix for bug 31448: [L3] Backend mistakes IMAP with SMTP password entries by updating external mail account credentials 

* 2014-02-25 - thorben.betten@open-xchange.com

 - Fix for bug 31222: Signal support for SSLv3 protocol on secure connect to POP3 server

* 2014-02-17 - thorben.betten@open-xchange.com

 - Fix for bug 31110: Proper re-initialize POP3 server's capabilities of successful authentication

* 2014-02-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 31106: Parse allowed units for bandwidth parameters as described in property file

* 2014-02-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 30966: Don't validate e-mail addresses of distribution list members when loading from the database

* 2014-02-10 - thorben.betten@open-xchange.com

 - Fix for bug 31039: Perform a move to trash through a RENAME command on associated IMAP folder

* 2014-02-07 - thorben.betten@open-xchange.com

 - Fix for bug 31021: Avoid needless examinations of all file stores to find a suitable one on context creation attempt
